--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "JavaReact\\AlibabaOpen\\": "src"
+      "Juckknife\\AlibabaOpen\\": "src"
     }
   },
   "autoload-dev": {
